--- a/sectormap/package.json
+++ b/sectormap/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-auto-bind": "^0.4.2",
     "react-dom": "^16.2.0",
     "react-google-maps": "^9.4.5",
     "react-scripts": "1.1.0",
