--- a/sectormap/package.json
+++ b/sectormap/package.json
@@ -3,17 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash.assignin": "^4.2.0",
     "react": "^16.2.0",
     "react-auto-bind": "^0.4.2",
     "react-dom": "^16.2.0",
     "react-google-maps": "^9.4.5",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-scripts": "1.1.0",
-    "recompose": "^0.26.0"
+    "recompose": "^0.26.0",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
